[gd_scene load_steps=75 format=3 uid="uid://vr4dk8ujmfbd"]

[ext_resource type="Texture2D" uid="uid://nxxto1y40or7" path="res://Enemys/Skeleton enemy/Skeleton enemy.png" id="1_705uf"]
[ext_resource type="Script" path="res://Enemys/Skeleton enemy/skeleton_enemy.gd" id="1_ws8lq"]
[ext_resource type="PackedScene" uid="uid://1hssl1a37upf" path="res://Enemys/Skeleton enemy/damage_box_skeleton.tscn" id="3_pptsv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_06612"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4k6h4"]
atlas = ExtResource("1_705uf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ml50"]
atlas = ExtResource("1_705uf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uykk"]
atlas = ExtResource("1_705uf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vrre"]
atlas = ExtResource("1_705uf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_82uev"]
atlas = ExtResource("1_705uf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ex3n"]
atlas = ExtResource("1_705uf")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8d8w"]
atlas = ExtResource("1_705uf")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_71b43"]
atlas = ExtResource("1_705uf")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtbsr"]
atlas = ExtResource("1_705uf")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j25qp"]
atlas = ExtResource("1_705uf")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrk81"]
atlas = ExtResource("1_705uf")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_grlso"]
atlas = ExtResource("1_705uf")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy8rh"]
atlas = ExtResource("1_705uf")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0kvr"]
atlas = ExtResource("1_705uf")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_382k7"]
atlas = ExtResource("1_705uf")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r110y"]
atlas = ExtResource("1_705uf")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k166b"]
atlas = ExtResource("1_705uf")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5pw6"]
atlas = ExtResource("1_705uf")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwuu4"]
atlas = ExtResource("1_705uf")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p41x"]
atlas = ExtResource("1_705uf")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vk7v"]
atlas = ExtResource("1_705uf")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m4vm"]
atlas = ExtResource("1_705uf")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pclmw"]
atlas = ExtResource("1_705uf")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf7xu"]
atlas = ExtResource("1_705uf")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v50hh"]
atlas = ExtResource("1_705uf")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m74q"]
atlas = ExtResource("1_705uf")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_557ja"]
atlas = ExtResource("1_705uf")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nme6w"]
atlas = ExtResource("1_705uf")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm4tx"]
atlas = ExtResource("1_705uf")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_38gy3"]
atlas = ExtResource("1_705uf")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvwun"]
atlas = ExtResource("1_705uf")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmugw"]
atlas = ExtResource("1_705uf")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk0dw"]
atlas = ExtResource("1_705uf")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rbr4"]
atlas = ExtResource("1_705uf")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6fwb"]
atlas = ExtResource("1_705uf")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_je3fu"]
atlas = ExtResource("1_705uf")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbqmn"]
atlas = ExtResource("1_705uf")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg5s6"]
atlas = ExtResource("1_705uf")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pre4"]
atlas = ExtResource("1_705uf")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubiqa"]
atlas = ExtResource("1_705uf")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v61yl"]
atlas = ExtResource("1_705uf")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn24h"]
atlas = ExtResource("1_705uf")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_apr4x"]
atlas = ExtResource("1_705uf")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4pra"]
atlas = ExtResource("1_705uf")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcbg0"]
atlas = ExtResource("1_705uf")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxroi"]
atlas = ExtResource("1_705uf")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mfvq"]
atlas = ExtResource("1_705uf")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4out"]
atlas = ExtResource("1_705uf")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_futv2"]
atlas = ExtResource("1_705uf")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ssw8"]
atlas = ExtResource("1_705uf")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_stee3"]
atlas = ExtResource("1_705uf")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptnje"]
atlas = ExtResource("1_705uf")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkevq"]
atlas = ExtResource("1_705uf")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e48hp"]
atlas = ExtResource("1_705uf")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uifm8"]
atlas = ExtResource("1_705uf")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32rhw"]
atlas = ExtResource("1_705uf")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_thrvx"]
atlas = ExtResource("1_705uf")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_da3mo"]
atlas = ExtResource("1_705uf")
region = Rect2(704, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yr4xr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k6h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ml50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uykk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vrre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82uev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ex3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8d8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71b43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtbsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j25qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrk81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grlso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy8rh")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0kvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_382k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r110y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k166b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5pw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwuu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p41x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vk7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m4vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pclmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf7xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v50hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m74q")
}],
"loop": false,
"name": &"Died",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_557ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nme6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm4tx")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38gy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvwun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk0dw")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rbr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6fwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je3fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbqmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg5s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pre4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubiqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v61yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn24h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apr4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4pra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcbg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxroi")
}],
"loop": false,
"name": &"Revive",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mfvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4out")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_futv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ssw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptnje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkevq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e48hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uifm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32rhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thrvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da3mo")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6brm"]
size = Vector2(173.125, 49.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ublxf"]
size = Vector2(336, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6ftb"]
size = Vector2(54, 25.5)

[sub_resource type="Animation" id="Animation_axxj2"]
resource_name = "Attack"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/damage_box_skeleton/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_3iglc"]
resource_name = "Death"
length = 1.8
step = 0.142
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Died"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142, 0.284, 0.426, 0.568, 0.71, 0.852, 0.994, 1.136, 1.278, 1.42, 1.562, 1.704),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_st3d3"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_u8un7"]
resource_name = "Idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_yieto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/damage_box_skeleton/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yrrc1"]
resource_name = "Revive"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Revive"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_tvkuk"]
resource_name = "Walk"
loop_mode = 1
step = 0.09
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.27, 0.36, 0.45, 0.54, 0.63, 0.72, 0.81, 0.9, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j7k38"]
_data = {
"Attack": SubResource("Animation_axxj2"),
"Death": SubResource("Animation_3iglc"),
"Hit": SubResource("Animation_st3d3"),
"Idle": SubResource("Animation_u8un7"),
"RESET": SubResource("Animation_yieto"),
"Revive": SubResource("Animation_yrrc1"),
"Walk": SubResource("Animation_tvkuk")
}

[node name="SkeletonEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_priority = 2.0
script = ExtResource("1_ws8lq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_06612")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.898438, 0.898438)
sprite_frames = SubResource("SpriteFrames_yr4xr")
animation = &"Idle"
autoplay = "Idle"

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
visible = false
shape = SubResource("RectangleShape2D_t6brm")

[node name="Detector2" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector2"]
shape = SubResource("RectangleShape2D_ublxf")

[node name="Attack" type="Node2D" parent="."]

[node name="AttackZone" type="Area2D" parent="Attack"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/AttackZone"]
visible = false
position = Vector2(3, -6.25)
shape = SubResource("RectangleShape2D_w6ftb")

[node name="damage_box_skeleton" parent="Attack" instance=ExtResource("3_pptsv")]

[node name="HurtBox" parent="Attack/damage_box_skeleton" index="0"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="Attack/damage_box_skeleton/HurtBox" index="0"]
position = Vector2(-0.5, 0.5)

[node name="HitBox" parent="Attack/damage_box_skeleton" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="Attack/damage_box_skeleton/HitBox" index="0"]
position = Vector2(0.125, -6.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_j7k38")
}

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector2" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Attack/AttackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="area_entered" from="Attack/damage_box_skeleton/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="Attack/damage_box_skeleton"]
